# morphgen-rates

./: CITATION.cff  LICENSE  README.md  extract_sholl_plots.py  pyproject.toml
data/: mitral_sholl_plot.csv  neocortex_bifurcations.csv
morphgen_rates/: README.md  pyproject.toml  rates.py
morphgen_rates/morphgen_tests/: __init__.py  neocortex_apical_sholl_plot.csv  rates.py
morphgen_rates/morphgen_tests/tests/: test.py
morphgen_rates/src/morphgen_rates/: data.py
morphgen_rates/src/morphgen_rates/data/: mitral_bifurcations.csv  pyr_apical_sholl_plot.csv  pyr_bifurcations.csv  sl_apical_sholl_plot.csv  sl_bifurcations.csv  tufted_bifurcations.csv  tufted_sholl_plot.csv
src/morphgen_rates/: rates.py
