[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morphgen-rates"
version = "0.1.0"
description = "Compute bifurcation and annihilation rates from morphology data"
authors = [
  { name = "Francesco Cavarretta", email = "fcavarretta@ualr.edu" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "pyomo>=6.6",
]

[options]
include_package_data = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
morphgen_rates = ["data/*.csv"]
